# verona-artifacts

./: .gitignore  README.md
WFWeakRC/: README.md
WFWeakRC/code/: CMakeLists.txt  main.cc  test.cc
WFWeakRC/code/include/: forward.h  rc.h  rcobjectclassic.h  rcobjectwf.h  rcobjectwfopt.h  strong.h  weak.h
WFWeakRC/scripts/: graph_one.py
WFWeakRC/verification/: .gitignore  wait-free-opt.cvf  wait-free.cvf
WhenConcurrencyStrikes/: Dockerfile  README.md  all-fast.sh  all-slow.sh
WhenConcurrencyStrikes/latex/: table_wrapper.tex
WhenConcurrencyStrikes/results/: actor_stats.csv  banking_scale.csv  boc_actor1.csv  boc_actor8.csv  boc_full1.csv  boc_full8.csv  boc_stats.csv  cloc_raw.csv  cloc_raw.pony.csv  pony1.csv  pony8.csv  pthread_dining_opt.csv  pthread_dining_opt_manual.csv  pthread_dining_seq.csv  verona_dining_opt.csv  verona_dining_opt_200.csv  verona_dining_seq.csv
frankenscript/: .gitignore  Dockerfile  README.md  all-examples-html.bash  all-examples.bash  all-figures-html.bash  all-figures.bash  fs-html.bash  fs.bash  watch.bash
frankenscript/figures/: README.md  fig02-isolation.frank  fig03-the-local-region.frank  fig05-cowns.frank  fig07-region-move.frank  fig09-frankenscript-example.frank  fig10-implicit-freezing.frank
frankenscript/res/: foot.txt  head.txt
